# python-bol-api

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.py  test_py.py  tox.ini
.github/workflows/: ci.yml  release.yaml  test.yaml
bol/: __init__.py  api.py  models.py  tests.py
bol/openapi/: api.py
bol/plaza/: api.py  models.py  tests.py
bol/retailer/: api.py  constants.py  models.py
tests/: test_openapi.py  test_plaza.py
