[tool.poetry.dependencies]
python = ">=3.8,<4"

python-dateutil = "^2"
requests = "^2"

[tool.poetry.dev-dependencies]
pytest = "^7"
flake8 = "^5"
black = ">=22.6"
isort = "^5"
httmock = "^1"

[tool.isort]
profile = "black"

[tool.semantic_release]
version_variable = "setup.py:VERSION"
version_source = "tag"
commit_version_number = true
commit_subject = "chore(release): {version}"
hvcs = "github"
upload_release = true
